--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     --dark-text: #2C2C2C;
     --gray-text: #666666;
     --accent-pink: #F8BBD9;
-    
+    /*prueba*/
     --font-display: 'Playfair Display', serif;
     --font-body: 'Montserrat', sans-serif;
 }
